<resources>
    <string name="app_name">MoviesApp</string>
    <string name="movie">Movie</string>
    <string name="tvshow">TVShow</string>
    <string name="poster_movie">Poster Movie</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="release">Release</string>
    <string name="runtime">Runtime</string>
    <string name="genres">Genres</string>
    <string name="descriptions">Descriptions</string>
    <string name="release_date">Release Date</string>
    <string name="first_air_date">First Air Date</string>
    <string name="episodes">Episodes</string>
    <string name="minutes_ext">"%1$s min"</string>
    <string name="episodes_ext">"%1$s eps"</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_bookmark">Add to Bookmark</string>
    <string name="remove_from_bookmark">Remove from Bookmark</string>
</resources>